--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple time tracker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "http-server ."
   },
   "repository": {
     "type": "git",
